--- a/CustomerHome/templates/base.html
+++ b/CustomerHome/templates/base.html
@@ -56,17 +56,6 @@
             <div class="col-sm-2" style="height: auto; background-color: #f1f1f1;" id="demo">
                 <div class="row">
                     <div class="col-sm mt-2">
-                        <label class="sr-only" for="inlineFormInputGroup">Search</label>
-                        <div class="input-group mb-2">
-                            <input type="search" class="form-control" id="inlineFormInputGroup" placeholder="Search">
-                            <div class="input-group-append">
-                                <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm mt-2">
                         <form>
                             <strong>Vehicles</strong>
                             <div class="form-check">
@@ -99,7 +88,7 @@
                             </div>
 
 
-                            <strong>Company</strong>
+                            <strong style="margin-top: 5px;">Company</strong>
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="Maruti">
                                 <label class="form-check-label" for="Maruti">Maruti</label>
