--- a/CustomerHome/templates/LoggedinBase.html
+++ b/CustomerHome/templates/LoggedinBase.html
@@ -118,42 +118,42 @@
 
                                 <strong>Company</strong>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="maruti"
+                                    <input type="radio" name="vechile_company" {% if selected == 'maruti' %}checked{% endif %} value="maruti"
                                         class="form-check-input vechile_company" id="Maruti">
                                     <label class="form-check-label" for="Maruti">Maruti</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="audi"
+                                    <input type="radio" name="vechile_company" {% if selected == 'audi' %}checked{% endif %} value="audi"
                                         class="form-check-input vechile_company" id="Audi">
                                     <label class="form-check-label" for="Audi">Audi</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="mercedes"
+                                    <input type="radio" name="vechile_company" {% if selected == 'mercedes' %}checked{% endif %} value="mercedes"
                                         class="form-check-input vechile_company" id="Mercedes">
                                     <label class="form-check-label" for="Mercedes">Mercedes</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="toyota"
+                                    <input type="radio" name="vechile_company" {% if selected == 'toyota' %}checked{% endif %} value="toyota"
                                         class="form-check-input vechile_company" id="Toyato">
                                     <label class="form-check-label" for="Toyato">Toyota</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="tata"
+                                    <input type="radio" name="vechile_company" {% if selected == 'tata' %}checked{% endif %} value="tata"
                                         class="form-check-input vechile_company" id="Tata">
                                     <label class="form-check-label" for="Tata">Tata</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="kia"
+                                    <input type="radio" name="vechile_company" {% if selected == 'kia' %}checked{% endif %} value="kia"
                                         class="form-check-input vechile_company" id="Kia">
                                     <label class="form-check-label" for="Kia">Kia</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="tesla"
+                                    <input type="radio" name="vechile_company" {% if selected == 'tesla' %}checked{% endif %} value="tesla"
                                         class="form-check-input vechile_company" id="Tesla">
                                     <label class="form-check-label" for="Tesla">Tesla</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" name="vechile_company" value="Ford"
+                                    <input type="radio" name="vechile_company" {% if selected == 'Ford' %}checked{% endif %} value="Ford"
                                         class="form-check-input vechile_company" id="ford">
                                     <label class="form-check-label" for="ford">Ford</label>
                                 </div>
